--- a/lab-python-functions.ipynb
+++ b/lab-python-functions.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "id": "8db6986a",
    "metadata": {},
    "outputs": [
@@ -54,12 +54,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'chocolat', 'mug', 'hat'}\n",
+      "{'hat'}\n",
       "the order statistics \n",
-      "the total ordered is :  3\n",
-      "percentage of product ordered:  60.0\n",
+      "the total ordered is :  1\n",
+      "percentage of product ordered:  20.0\n",
       "the quantity of  t-shirt is :  2\n",
-      "the quantity of  mug is :  1\n",
+      "the quantity of  mug is :  2\n",
       "the quantity of  hat is :  1\n",
       "the quantity of  book is :  2\n",
       "the quantity of  keychain is :  2\n"
@@ -124,7 +124,7 @@
     "\n",
     "products1 = [\"t-shirt\", \"mug\", \"hat\", \"book\", \"keychain\"]\n",
     "\n",
-    "inventory1 = initialize_inventory(products1)\n",
+    "inventory1 = initialize_inventory (products1)\n",
     "customer_orders1 = get_customer_order ()\n",
     "print(customer_orders1 )\n",
     "inventory1 = update_inventory(customer_orders1, inventory1)\n",
